# Quarter3-Assignments

.devcontainer/: devcontainer.json
bank-agent/: README.md  main.py  pyproject.toml
class10-online-session-due to-eid/AI-Research-Bot/: README.md  packages.txt  pyproject.toml  requirements.txt
class10-online-session-due to-eid/AI-Research-Bot/.streamlit/: config.toml  secrets.toml
class10-online-session-due to-eid/AI-Research-Bot/agents/: translator_agent.py
class10-online-session-due to-eid/AI-Research-Bot/orchestrator/: swarm_controller.py
class10/ai-research-bot/: openrouter_setup.py
class3/: lesson5.py
class6/: README.md  pyproject.toml  requirements.txt
class6/codementor/: main.py  pyproject.toml
class6/src/codementor/: __init__.py  challenges.py  free_courses.py  lessons.py  main.py  playground.py
class6/src/codementor/data/: challenges.py  lessons.py  quizzes.py
class7/: requirements.txt  user_progress.json  user_progress_default.json
class7/src/codementor/: blogs.py  challenges.py  harvard_courses.py  interview_prep.py  lessons.py  main.py  playground.py  progress_dashboard.py  quizzes.py
class7/src/codementor/data/: lessons.py  progress.py
class7/src/codementor/user_progress/: default_user.json
class8/: README.md  pyproject.toml  requirements.txt
class8/.streamlit/: secrets.toml
class8/src/codementor/: blogs.py  challenges.py  free_courses.py  interview_prep.py  lessons.py  main.py  playground.py  progress_dashboard.py  quizzes.py
class8/src/codementor/data/: challenges.py  progress.py  quizzes.py
class9/QuoteForge/: README.md  main.py  pyproject.toml
class9/QuoteForge/src/: auth.py  payment.py  poster.py
console-based-agent/: .gitignore  README.md  USAGE_GUIDE.txt  main.py  models.py  pyproject.toml  tools.py
console-based-agent/agents/: billing_agent.py  general_agent.py  technical_agent.py  triage_agent.py
eid-session/ai-research-bot/: .env  README.md  litellm_setup.py  main.py  pyproject.toml  requirements.txt
eid-session/ai-research-bot/.streamlit/: secrets.toml
eid-session/ai-research-bot/agents/: qa_agent.py  research_paper_agent.py  summarizer_agent.py
task-august-11/: README.md  main.py  pyproject.toml
task-july17/: .env  main.py  pyproject.toml
