[project]
name = "codementor"
version = "0.1.0"
description = "An interactive programming learning platform"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "requests>=2.31.0",
    "plotly>=5.18.0",
    "tenacity>=8.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codementor"]
