[project]
name = "ai-research-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=24.1.1",
    "click>=8.1.7",
    "flake8>=7.0.0",
    "fpdf2>=2.7.8",
    "isort>=5.13.2",
    "jinja2>=3.1.3",
    "litellm>=1.30.7",
    "markdown>=3.5.2",
    "openai>=1.12.0",
    "openrouter>=0.1.0",
    "pydantic>=2.6.1",
    "pylint>=3.0.3",
    "pytest>=8.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.0.8",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "streamlit>=1.32.0",
    "typing-extensions>=4.9.0",
    "weasyprint>=60.2",
]
