[project]
name = "ai-research-bot"
version = "0.1.0"
description = "An AI-powered research assistant that combines multiple AI technologies"
authors = [
    {name = "Ayesha Mughal", email = "ayeshamughal216@gmail.com"}
]
dependencies = [
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.30.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "openrouter>=0.1.0",
    "reportlab>=4.1.0",
    "fpdf2>=2.7.8",
    "markdown>=3.5.2",
    "python-docx>=1.1.0",
    "jinja2>=3.1.3",
    "pydantic>=2.6.3",
    "typing-extensions>=4.10.0",
    "python-multipart>=0.0.9"
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0301",  # line-too-long
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
    "W0311",  # bad-indentation
    "W0603",  # global-statement
    "W0621",  # redefined-outer-name
    "W0703",  # broad-except
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "fp"]

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
