[project]
name = "ai-research-bot"
version = "0.1.0"
description = "An AI-powered research assistant with multiple specialized agents"
authors = [
    {name = "CodeVoyager007", email = "your.email@example.com"}
]
dependencies = [
    "streamlit>=1.32.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.30.7",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "openrouter>=0.4.0",
    "reportlab>=4.1.0",
    "fpdf2>=2.7.8",
    "markdown>=3.5.2",
    "python-docx>=1.1.0",
    "weasyprint>=60.2",
    "jinja2>=3.1.3",
    "pydantic>=2.6.3",
    "typing-extensions>=4.10.0",
    "python-multipart>=0.0.9"
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pylint.messages_control]
disable = ["C0111", "C0103", "C0303"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
